WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27472
REGRESSION (
r39185
): Safari adds ".jpeg" extension to images that already have ".JPG" extension
https://bugs.webkit.org/show_bug.cgi?id=27472
Summary
REGRESSION (r39185): Safari adds ".jpeg" extension to images that already hav...
Darin Adler
Reported
2009-07-20 16:59:33 PDT
Find an image in a web site that ends in .JPG. Drag it to your desktop and you will get an image called imagename.JPG.jpeg. I think this is incorrect. I think if you need to change the name, it should simply be changed to imagename.jpg. If you find an image with the suffix .jpg, the filename is not changed. <
rdar://problem/7065772
>
Attachments
patch
(2.52 KB, patch)
2009-07-20 17:14 PDT
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2009-07-20 17:14:52 PDT
Created
attachment 33124
[details]
patch
Darin Adler
Comment 2
2009-07-22 09:33:34 PDT
For the record, the text in the description is something from someone who reported the bug, not me.
Darin Adler
Comment 3
2009-07-22 10:03:47 PDT
http://trac.webkit.org/changeset/46227
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug