2009-07-20  Darin Adler  <darin@apple.com>

Reviewed by Dan Bernstein.

        REGRESSION (r39185): Safari adds ".jpeg" extension to images that already have ".JPG" extension
        https://bugs.webkit.org/show_bug.cgi?id=27472

        * WebView/WebHTMLView.mm:
        (matchesExtensionOrEquivalent): Changed category method into a C function.
        Made it require the leading dot when checking for the extension and do it
        in a non-case-sensitive way.
        (-[WebHTMLView namesOfPromisedFilesDroppedAtDestination:]): Changed to call
        the function.



Canonical link: https://commits.webkit.org/37841@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46227 268f45cc-cd09-0410-ab3c-d52691b4dbfc